// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_EuiPageBottomBar is rendered 1`] = `
Array [
  <section
    aria-label="aria-label"
    class="euiBottomBar euiBottomBar--sticky testClass1 testClass2 css-1cjporg-euiBottomBar-sticky"
    data-test-subj="test subject string"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-npj38n-euiPageSection-l-top-transparent"
    >
      <div
        class="css-10pkat8-euiPageSection__width-l"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar paddingSize l is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-npj38n-euiPageSection-l-top-transparent"
    >
      <div
        class="css-10pkat8-euiPageSection__width-l"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar paddingSize m is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-11vpkfb-euiPageSection-m-top-transparent"
    >
      <div
        class="css-r5o87e-euiPageSection__width-m"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar paddingSize none is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-utbtd9-euiPageSection-top-transparent"
    >
      <div
        class="css-17q7k44-euiPageSection__width"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar paddingSize s is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-8fzuso-euiPageSection-s-top-transparent"
    >
      <div
        class="css-x2ge1o-euiPageSection__width-s"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar paddingSize xl is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-kzwuy3-euiPageSection-xl-top-transparent"
    >
      <div
        class="css-1395yyy-euiPageSection__width-xl"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar paddingSize xs is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-v3ihak-euiPageSection-xs-top-transparent"
    >
      <div
        class="css-1ebgf5s-euiPageSection__width-xs"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar restrict width can be set to a custom number 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-npj38n-euiPageSection-l-top-transparent"
    >
      <div
        class="css-qz8oj4-euiPageSection__width-l"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar restrict width can be set to a custom value and measurement 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-npj38n-euiPageSection-l-top-transparent"
    >
      <div
        class="css-dr8xkq-euiPageSection__width-l"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`_EuiPageBottomBar restrict width can be set to a default 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiBottomBar euiBottomBar--sticky css-1cjporg-euiBottomBar-sticky"
    style="left:0;right:0;bottom:0;flex-shrink:0"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="css-npj38n-euiPageSection-l-top-transparent"
    >
      <div
        class="css-12fxf36-euiPageSection__width-l"
      />
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;
